--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.19.3",
     "antd-css-utilities": "^1.0.3",
+    "i18next": "^21.8.3",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.9",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.50.1",
