--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-papaparse": "^4.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spreadsheet": "^0.7.7",
     "sass": "^1.50.1",
+    "scheduler": "^0.23.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
