--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
     "node-sass": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.26",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.16.9",
     "react-organizational-chart": "^2.1.1",
     "react-papaparse": "^4.0.2",
