--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^21.8.3",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-data-grid": "^7.0.0-beta.26",
