--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@ant-design/icons": "^4.7.0",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.19.3",
     "antd-css-utilities": "^1.0.3",
+    "axios": "^1.3.4",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.6.0",
+    "framer-motion": "^10.9.1",
     "i18next": "^21.8.3",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
@@ -21,9 +24,11 @@
     "react": "^18.2.0",
     "react-data-grid": "^7.0.0-beta.26",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-i18next": "^11.16.9",
     "react-organizational-chart": "^2.1.1",
     "react-papaparse": "^4.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-spreadsheet": "^0.7.7",
@@ -32,7 +37,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --env",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
