--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 REACT_APP_API_URL = http://134.209.233.190:3000/
+REACT_APP_SCR_API_URL = https://solv11proto.ngrok.io
+REACT_APP_API_KEY=AIzaSyDD8YJjwcklO31erF7PDvPZRyRgwPqs3tQ
+REACT_APP_AUTH_DOMAIN=neon-fiber-339917.firebaseapp.com
+REACT_APP_DATABASE_URL=https://neon-fiber-339917-default-rtdb.europe-west1.firebasedatabase.app
+REACT_APP_PROJECT_ID=neon-fiber-339917
+REACT_APP_STORAGE_BUCKET=neon-fiber-339917.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=245873116915
+REACT_APP_APP_ID=1:245873116915:web:ded063bc7ad9f9415a9986
+REACT_APP_MEASUREMENT_ID=G-Y88BL45X8S
