--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.6.0",
+    "firebase": "^9.17.2",
     "framer-motion": "^10.9.1",
     "i18next": "^21.8.3",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -34,6 +35,7 @@
     "react-spreadsheet": "^0.7.7",
     "sass": "^1.50.1",
     "scheduler": "^0.23.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
