--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_API_URL = http://134.209.233.190:3000/
-REACT_APP_SCR_API_URL = https://solv11proto.ngrok.io
+REACT_APP_SCR_API_URL = http://86.213.88.101
 REACT_APP_API_KEY=AIzaSyDD8YJjwcklO31erF7PDvPZRyRgwPqs3tQ
 REACT_APP_AUTH_DOMAIN=neon-fiber-339917.firebaseapp.com
 REACT_APP_DATABASE_URL=https://neon-fiber-339917-default-rtdb.europe-west1.firebasedatabase.app
