--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.19.3",
     "antd-css-utilities": "^1.0.3",
     "axios": "^1.3.4",
+    "buffer": "^6.0.3",
     "d3": "^7.6.1",
     "d3-org-chart": "^2.6.0",
     "firebase": "^9.17.2",
