--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_API_URL = https://solv11.cloud/solv11backend/
 REACT_APP_SCR_API_URL = https://kernel.solv11.cloud
+REACT_APP_VAPID_KEY = BLIyTn_zHJ1NhL6dQcd51ar0bu-0QV3KQKQodcpOLPLvzuS6QolkwuVNi2tnYy_yxSttktoE_x7XF6DGNOuyw7Y
 REACT_APP_API_KEY=AIzaSyDD8YJjwcklO31erF7PDvPZRyRgwPqs3tQ
 REACT_APP_AUTH_DOMAIN=neon-fiber-339917.firebaseapp.com
 REACT_APP_DATABASE_URL=https://neon-fiber-339917-default-rtdb.europe-west1.firebasedatabase.app
