--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sass": "^1.50.1",
     "scheduler": "^0.23.0",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start --env",
